--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.h2database:h2'
+
+    implementation 'org.apache.poi:poi:4.1.2'
+    implementation 'org.apache.poi:poi-ooxml:4.1.2'
+    implementation group: 'com.monitorjbl', name: 'xlsx-streamer', version: '2.2.0'
 }
 
 tasks.named('test') {
